# crysvue

./: .gitignore  README.md  apt.txt  postBuild  pyproject.toml
crysvue/: __init__.py
crysvue/canvases/: __init__.py  canvas.py  vispy.py
crysvue/logic/: atoms.py  axes.py  spins.py  unit_cell.py
crysvue/misc/: color.py  extract_sg.py
crysvue/visual/: __init__.py  atoms.py  axes.py  generic.py  unit_cell.py
crysvue/visual/vispy/: __init__.py  atoms.py  axes.py  components.py  spins.py  unit_cell.py
crysvue/visual/vispy/gloo/: unit_cell.glf  unit_cell.glv
examples/: example1.ipynb  example1.py
